compiler/testData/integration/smoke/syntaxErrors/test.kt
package test

fun test() {
    konst s = System.in
}