compiler/testData/integration/smoke/syntaxErrors/test.compile.expected

ERR:
test.kt:4:20: error: expecting an element
    konst s = System.in
                   ^

Return code: 1
